--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -25,7 +25,7 @@
             <input type="radio" name="actionType" value="sms" class="billItemTypeWithSettings">
             <span class="label-body">SMS</span>
           </label>
-          <button class="button-primary" type="submit">Add</button>
+          <button class="button-primary" type="{{change}}">Add</button>
         </form>
         <h5>Totals</h5>
         <table>
@@ -45,7 +45,7 @@
             <td>
               <a href="/actions">Total</a>
             </td>
-            <td> R<span class="totalSettings">{{totals.grandTotal}}</span> </td>
+            <td> R<span class="totalSettings {{level}}">{{totals.grandTotal}}</span> </td>
           </tr>
         </table>
 
